--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,4 +1,4 @@
 [defaults]
 hostfile = hosts
-private_key_file = /home/w5rtc/Desktop/raguraman.pem
+private_key_file = raguraman.pem
 host_key_checking = False
