--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,4 +1,4 @@
 [defaults]
 hostfile = hosts
-private_key_file = /var/lib/jenkins/.ssh/id_rsa/raguraman.pem
+private_key_file = /var/lib/jenkins/raguraman.pem
 host_key_checking = False
