--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,4 +1,4 @@
 [defaults]
 hostfile = hosts
-private_key_file = /var/lib/jenkins/secret.key
+private_key_file = /home/ubuntu/.cache/raguraman.pem
 host_key_checking = False
