--- a/ansible.cfg
+++ b/ansible.cfg
@@ -2,3 +2,6 @@
 hostfile = hosts
 private_key_file = /home/ubuntu/Desktop/balaraman.pem
 host_key_checking = False
+
+[ssh_connection]
+control_path = /tmp
