--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,4 +1,4 @@
 [defaults]
 hostfile = hosts
-private_key_file = /home/ubuntu/~/.ssh/balaraman.pem
+private_key_file = /home/ubuntu/Desktop/balaraman.pem
 host_key_checking = False
