--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,4 +1,14 @@
 [defaults]
+sudo_flags=-HE
+
+[ssh_connection]
+ssh_args = -F ssh/bastion.config -o ForwardAgent=yes -o ControlPath=/tmp/ssh-%r@%h:%p -o ControlMaster=auto -o ControlPersist=60s
+
+
+
+
+[defaults]
 hostfile = hosts
 private_key_file = /home/ubuntu/Desktop/balaraman.pem
 host_key_checking = False
+
