--- a/ansible.cfg
+++ b/ansible.cfg
@@ -2,13 +2,4 @@
 sudo_flags=-HE
 
 [ssh_connection]
-ssh_args = -F ssh/bastion.config -o ForwardAgent=yes -o ControlPath=/tmp/ssh-%r@%h:%p -o ControlMaster=auto -o ControlPersist=60s
-
-
-
-
-[defaults]
-hostfile = hosts
-private_key_file = /home/ubuntu/Desktop/balaraman.pem
-host_key_checking = False
-
+ssh_args = -F ssh/bastion.config -o ForwardAgent=yes -o ControlPath="/var/lib/jenkins/.ansible/cp/ansible-ssh-%h-%p-%r" -o ControlMaster=auto -o ControlPersist=60s
