--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,5 +1,9 @@
 [defaults]
 sudo_flags=-HE
+hostfile = hosts
+private_key_file = /home/w5rtc/Desktop/raguraman.pem
+host_key_checking = False
+
 
 [ssh_connection]
 ssh_args = -F ssh/bastion.config -o ForwardAgent=yes -o ControlPath="/var/lib/jenkins/.ansible/cp/ansible-ssh-%h-%p-%r" -o ControlMaster=auto -o ControlPersist=60s
