--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,9 +1,5 @@
 [defaults]
 sudo_flags=-HE
-hostfile = hosts
-private_key_file = /home/ubuntu/Desktop/raguraman.pem
-host_key_checking = False
-
 
 [ssh_connection]
-ssh_args = -F ssh/bastion.config -o ForwardAgent=yes -o ControlPath="/var/lib/jenkins/.ansible/cp/ansible-ssh-%h-%p-%r" -o ControlMaster=auto -o ControlPersist=60s
+ssh_args = -F /home/ubuntu/Desktop/ansible.cfg -o ForwardAgent=yes -o ControlPath="/var/lib/jenkins/.ansible/cp/ansible-ssh-%h-%p-%r" -o ControlMaster=auto -o ControlPersist=60s
