--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,4 +1,8 @@
 [defaults]
+ostfile = hosts
+private_key_file = /home/ubuntu/Desktop/raguraman.pem
+host_key_checking = False
+
 sudo_flags=-HE
 
 [ssh_connection]
