--- a/ansible.cfg
+++ b/ansible.cfg
@@ -6,4 +6,4 @@ host_key_checking = False
 sudo_flags=-HE
 
 [ssh_connection]
-ssh_args = -F /home/ubuntu/Desktop/ansible.cfg -o ForwardAgent=yes -o ControlPath="/var/lib/jenkins/.ansible/cp/ansible-ssh-%h-%p-%r" -o ControlMaster=auto -o ControlPersist=60s
+ssh -C -tt -vvv = -F /home/ubuntu/Desktop/ansible.cfg -o ForwardAgent=yes -o ControlPath="/var/lib/jenkins/.ansible/cp/ansible-ssh-%h-%p-%r" -o ControlMaster=auto -o ControlPersist=60s
