--- a/ansible.cfg
+++ b/ansible.cfg
@@ -2,8 +2,15 @@
 hostfile = hosts
 private_key_file = /home/ubuntu/Desktop/balaraman.pem
 host_key_checking = False
-
-sudo_flags=-HE
-
-[ssh_connection]
-ssh -C -tt -vvv = -F /home/ubuntu/Desktop/ansible.cfg -o ForwardAgent=yes -o ControlPath="/var/lib/jenkins/.ansible/cp/ansible-ssh-%h-%p-%r" -o ControlMaster=auto -o ControlPersist=60s
+inventory      = /etc/ansible/hosts
+library        = /usr/share/my_modules/
+remote_tmp     = $HOME/.ansible/tmp
+pattern        = *
+forks          = 5
+poll_interval  = 15
+sudo_user      = root
+ask_sudo_pass = True
+ask_pass      = True
+transport      = smart
+remote_port    = 22
+module_lang    = C
