--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,4 +1,4 @@
 [defaults]
 hostfile = hosts
 private_key_file = /home/ubuntu/Desktop/raguraman.pem
-ansible_host_key_checking = False
+host_key_checking = False
